--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tiptap/starter-kit": "^2.1.13",
     "bcryptjs": "^3.0.3",
     "date-fns": "^3.0.6",
+    "framer-motion": "^12.23.26",
     "lowlight": "^3.1.0",
     "next": "14.0.4",
     "react": "^18.2.0",
@@ -35,6 +36,3 @@
     "tailwindcss": "^3.4.0"
   }
 }
-
-
-
