--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "date-fns": "^3.0.6",
     "framer-motion": "^12.23.26",
     "lowlight": "^3.1.0",
-    "next": "14.0.4",
+    "next": "^14.2.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2"
@@ -33,7 +33,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14.2.35",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.1"
   }
